# handmade_hero

./: .gitignore  CMakeLists.txt  build.bat  test.out
code/: handmade.cpp  handmade.def  handmade.h  win32_handmade.cpp  win32_handmade.h
data/: test.out
